--- a/pages/style.css
+++ b/pages/style.css
@@ -128,3 +128,34 @@ color: black;
 font-family:cursive;
 box-shadow:3px 3px 10px 10px rgb(108, 106, 106) ;
 }
+.container4
+{
+        background-color:white;
+         border:1px solid rgba(255, 255, 255, 0.788);
+        border-radius:0px 0px 0px 0px;
+         margin-left:50;
+         margin-right:50;
+         padding:10px 5px 10px 5px;
+         text-align: center;
+         height: 600px;
+         width:1500px;
+         display: flex;
+         flex-direction: row;
+        
+}
+.box2
+{
+    background-color:rgb(34, 231, 231);
+border-radius:20px 20px;
+border:1px solid black;
+height:900px;
+width:1100px;
+padding:10px 10px;
+margin-left: 200px;px;
+margin-right:200px;
+text-align: center;
+font-size:20px;
+color: black;
+font-family:cursive;
+box-shadow:3px 3px 10px 10px rgb(108, 106, 106) ;
+}
