--- a/pages/style.css
+++ b/pages/style.css
@@ -137,7 +137,7 @@ box-shadow:3px 3px 10px 10px rgb(108, 106, 106) ;
          margin-right:50;
          padding:10px 5px 10px 5px;
          text-align: center;
-         height: 600px;
+         height:1000px;
          width:1500px;
          display: flex;
          flex-direction: row;
@@ -145,14 +145,15 @@ box-shadow:3px 3px 10px 10px rgb(108, 106, 106) ;
 }
 .box2
 {
-    background-color:rgb(34, 231, 231);
+    background-color:aliceblue;
 border-radius:20px 20px;
 border:1px solid black;
 height:900px;
 width:1100px;
 padding:10px 10px;
-margin-left: 200px;px;
+margin-left: 200px;
 margin-right:200px;
+margin-top:100px;
 text-align: center;
 font-size:20px;
 color: black;
