--- a/pages/style.css
+++ b/pages/style.css
@@ -1,7 +1,7 @@
 .container1
 {
-        background-color:white;
-         border:5px solid white;
+        background-color:honeydew;
+         border:5px solid honeydew;
         border-radius:0px 0px 0px 0px;
          margin-left:50;
          margin-right:50;
@@ -14,7 +14,7 @@
          box-shadow:3px 3px 10px 10px rgb(138,136,136) ;
 }.container2
 {
-        background-color:white;
+        background-color:honeydew;
          border:1px solid rgba(255, 255, 255, 0.788);
         border-radius:0px 0px 0px 0px;
          margin-left:50;
@@ -28,7 +28,7 @@
         
 }.container3
 {
-        background-color:rgb(255, 255, 255);
+        background-color:honeydew;
          border-right:5px solid rgb(225, 216, 216) ;
         border-radius:0px 0px 0px 0px;
          margin-left:10px;
@@ -66,27 +66,27 @@
 }
 .heading1
 {
-background-color:white;
+background-color:rgb(232, 16, 88);
 font-size:80px;
 font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-color:black;
-
+color:rgb(7, 8, 12);
+display:flexbox;
 text-align: center;
-
-          
+justify-content:center;
+margin-left:12px;
+ border:3px solid blue;   
+ box-shadow:3px 3px 10px 10px rgb(108, 106, 106) ;      
 }
 .heading2
 { 
 font-size:30px;
-
-background-color:white; 
-border:5px solid rgb(255, 252, 252);
+background-color:honeydew; 
 border-radius:0px 0px 0px 0px;
 height:50px;
+display:flex;
+flex-direction: row;
+justify-content:end;
 width: 1500;
-margin-left:60px;
-padding-left:50px ;
-padding-top:10px;
 
 
 }
@@ -114,7 +114,7 @@ box-shadow:3px 3px 10px 10px rgb(108, 106, 106) ;
 }
 .box1
 {
-    background-color:rgb(110, 115, 204);
+    background-color:rgb(103, 108, 214);
 border-radius:20px 20px;
 border:1px solid black;
 height:300px;
@@ -130,7 +130,7 @@ box-shadow:3px 3px 10px 10px rgb(108, 106, 106) ;
 }
 .container4
 {
-        background-color:white;
+        background-color:honeydew;
          border:1px solid rgba(255, 255, 255, 0.788);
         border-radius:0px 0px 0px 0px;
          margin-left:50;
@@ -156,7 +156,21 @@ margin-right:200px;
 margin-top:100px;
 text-align: center;
 font-size:20px;
-color: black;
+color: rgb(20, 19, 19);
 font-family:cursive;
 box-shadow:3px 3px 10px 10px rgb(108, 106, 106) ;
+}
+.btn
+{
+    border:1px solid rgb(239, 231, 231);
+    background-color: rgb(28, 11, 25);
+padding:10px;
+margin:2px;
+    color: white;
+    text-align: center;
+    font-size:20px;
+    border-radius:100px;
+    height:30px;
+width:300px;
+
 }
