--- a/pages/style.css
+++ b/pages/style.css
@@ -164,13 +164,56 @@ box-shadow:3px 3px 10px 10px rgb(108, 106, 106) ;
 {
     border:1px solid rgb(239, 231, 231);
     background-color: rgb(28, 11, 25);
-padding:10px;
-margin:2px;
+padding:10px;margin:2px;
     color: white;
     text-align: center;
     font-size:20px;
     border-radius:100px;
     height:30px;
 width:300px;
+
+}
+.container5
+{
+        background-color:honeydew;
+         border:1px solid rgba(255, 255, 255, 0.788);
+        border-radius:0px 0px 0px 0px;
+        padding:10px 5px 10px 5px;
+         text-align: center;
+         height:900px;
+         width:1500px;
+         display: flex;
+         flex-direction: row;
+         align-items: center;
+        
+}
+.item3{
+    background-color:white;
+    border:5px solid rgb(17, 16, 16);
+    border-radius:10px 10px 10px 10px;
+    height:600px;
+    width:900px;
+    padding:10px 5px 10px 5px;
+    text-align:center;
+    background-color:rgb(13, 236, 232);
+    box-shadow:0px 0px 5px 5px rgb(85, 81, 81) ;
+display:block;
+margin:300px;
+padding: 50px;
+
+
+
+}
+.btn1
+{
+    border:1px solid rgb(239, 231, 231);
+    background-color: rgb(28, 11, 25);
+padding:10px;
+margin:2px;
+    color: white;
+    text-align: center;
+    font-size:20px;
+    border-radius:100px;
+   width:100px;
 
 }
